@@ -1,5 +1,9 @@
 2004-09-23  Philippe Gerum  <rpm@xenomai.org>
 
+	* nucleus/pod.c (xnpod_start_timer): Allow the arch-dependent code
+	grabbing the hw timer to request a precise start time for the host
+	tick timer.
+
 	* include/nucleus/asm-*/syscall.h: Define an arch-dependent way of
 	setting the value returned by syscalls, using
 	__xn_success_return(), __xn_error_return() and
